--- a/.gitignore
+++ b/.gitignore
@@ -12,17 +12,17 @@ __pycache__/
 *$py.class
 
 # Arquivos de cache do Streamlit e outros caches
-.streamlit/secrets.toml # Nunca envie seus segredos!
-*.streamlit # Cache de uploads, etc. (embora o secrets.toml seja o mais crítico)
+.streamlit/secrets.toml  
+*.streamlit 
 
 # Arquivos temporários de banco de dados (se você não quiser nem o padrão no gitignore)
 temp_*.db 
 # *.db # Se você NUNCA quiser versionar nenhum arquivo .db (cuidado se algum .db for parte do projeto)
 
 # Arquivos de IDE e sistema operacional
-.vscode/ # Configurações do VSCode (exceto se você quiser compartilhar configurações específicas do projeto)
-.DS_Store # macOS
-Thumbs.db # Windows
+.vscode/ 
+.DS_Store
+Thumbs.db
 
 # Arquivos de build/distribuição (se aplicável no futuro)
 build/
